...
    modifier: Modifier = Modifier
) {
    Column(modifier = modifier) {
        NoteEditField(
            text = note.title,
            onTextChanged = { onNoteChanged(note.copy(title = it)) },
            placeholder = "Title",
            style = MaterialTheme.typography.headlineMedium,
            color = MaterialTheme.colorScheme.onSurface,
            hasClearIcon = true,
            isSingleLine = true,
            modifier = Modifier
                .padding(bottom = 24.dp)
        )

        NoteEditField(
            text = note.body,
            onTextChanged = { onNoteChanged(note.copy(body = it)) },
            placeholder = "Note",
            style = MaterialTheme.typography.bodyLarge,
            color = MaterialTheme.colorScheme.onSurface,
            hasClearIcon = false,
            isSingleLine = false,
            modifier = Modifier
                .weight(1f)
...
