...
        },
        floatingActionButton = {
            FloatingActionButton(
                onClick = { onNavigateToNote(Note().id) },
                shape = CircleShape,
                modifier = Modifier
                    .testTag("add_note_fab")
            ) {
                Icon(
                    add,
                    null,
                    modifier = Modifier
                        .size(36.dp)
...
